--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/prestamos_vencidos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/prestamos_vencidos.tmpl
@@ -133,9 +133,7 @@
 		    </tfoot>
   </table>
 [% ELSE %]
-    <div class="well">
-        <div class="resultados_consulta">[% "No hay pr&eacute;stamos vencidos" | i18n %]</div> 
-    </div>      
+        <div class="alert alert-info">[% "No hay pr&eacute;stamos vencidos" | i18n %]</div> 
 [% END %]
 
    
