--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos_lista.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/tipos_de_prestamos_lista.tmpl
@@ -57,39 +57,29 @@
 
                             [% PERL %]
                                   print C4::AR::Filtros::action_button(
-                                                                  button       => "btn click",
+                                                                  button       => "btn btn-primary click",
                                                                   action       => 'modificarTipoPrestamo("[% tipo_prestamo.getId_tipo_prestamo %]")',
-                                                                  icon         => "icon-edit",
+                                                                  icon         => "icon-white icon-edit",
                                                                   title        => "",
                                   ) ;
                             [% END %]
 
 
         </td>
-<!--        <td   align="center">
-                            [% PERL %]
-                                print C4::AR::Filtros::to_Icon( text =>     "[% 'Eliminar' | i18n %]",
-                                                                onClick => "eliminarTipoPrestamo('[% tipo_prestamo.getId_tipo_prestamo %]')",
-                                                                boton   => "icon_borrar",
-                                                                title =>    "[% 'Eliminar' | i18n %]",
-                                                                alternClass => "botonCentrado"
-                                                            ) ;
-                            [% END %]
-        </td>-->
     </tr>
 [% END %]
        
  </tbody>
 </table>
 
-            <div style="float: left; width: 100%;">
-            [% PERL %]
-                                
-                                print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar' | i18n %]",
-                                                                    boton   => "boton_buscar",
-                                                                    onClick => "agregarTipoPrestamo();",
-                                                                    title   => "[% 'Agregar Tipo de Pr&eacute;stamo' | i18n %]",
-                                                                    alternClass => "botonCentrado"
-                                        ) ;
-            [% END %]
-            </div>
+  <div class="form-actions">
+	  [% PERL %]
+	                      
+	                      print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar' | i18n %]",
+	                                                          boton   => "boton_buscar",
+	                                                          onClick => "agregarTipoPrestamo();",
+	                                                          title   => "[% 'Agregar Tipo de Pr&eacute;stamo' | i18n %]",
+	                                                          alternClass => "botonCentrado"
+	                              ) ;
+	  [% END %]
+  </div>
