--- a/intranet/htdocs/intranet-tmpl/admin/global/ver_novedad_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/ver_novedad_intra.tmpl
@@ -1,10 +1,12 @@
 [% USE HTML %]
-<div class="novedad_contacto">
-    <h2>[% 'Titulo' | i18n %]: [% HTML.escape(novedad.getTitulo) %]</h2>
-    <fieldset>
-        <legend>[% 'Cuerpo de la novedad' | i18n %]:</legend>
-        <h3>[% HTML.escape(novedad.getContenido) %]</h3>
-        <h4> [% novedad.getFechaLegible %]</h4>
-    </fieldset>
-    <a href="#">[% novedad.getFechaLegible %] </a>
+
+<div class="modal-header">
+  <a href="#" class="close" data-dismiss="modal">×</a>
+  <h3>[% HTML.escape(novedad.getTitulo) %]</h3>
+</div>
+<div class="modal-body">
+  <p>[% HTML.escape(novedad.getContenido) %]</p>
+</div>
+<div class="modal-footer">
+   <h4> [% novedad.getFechaLegible %]</h4>
 </div>
