--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -24,7 +24,7 @@
 
   <div class="responder" style="display:none; padding-top:10px;">
       <textarea id="respuesta" name="respuesta" class="self_review" style="width: 377px"></textarea>
-      <div class="form-actions">
+      <div class="">
 		   [% PERL %]
 		           print C4::AR::Filtros::action_button( 
 		                                           button         => "btn btn-primary click",
