--- a/intranet/htdocs/intranet-tmpl/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/mensajes_contacto.tmpl
@@ -1,5 +1,5 @@
 [% USE HTML %]
-[% IF cant_noleidos > 0 %]
+[% IF cant_noleidos %]
     <fieldset>
         <legend>[% "Mensajes de Contacto :" | i18n %]</legend>    
          <dl>
