--- a/intranet/htdocs/intranet-tmpl/admin/novedades_opac_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/novedades_opac_ajax.tmpl
@@ -84,7 +84,7 @@
                 </table>
             </div>
         [% ELSE %]
-            <h2>[% 'No hay novedades' | i18n %]</h2>
+            <div class="alert alert-info">[% 'No hay novedades' | i18n %]</div>
         [% END %]
 </fieldset>
 <div class="form-actions">
