--- a/intranet/htdocs/intranet-tmpl/changepassword.tmpl
+++ b/intranet/htdocs/intranet-tmpl/changepassword.tmpl
@@ -69,21 +69,6 @@ $(document).ready(function() {
     </fieldset>
 [% END %]
 
-[% IF mensaje %]
-    <fieldset>
-        <legend class="titulo_legend_warning">[% 'Error' | i18n %]</legend>
-        <div class='tableMsgUser'>
-            <font class='fontMsgUser'>
-                <b>
-                    <div id='mensajes'>
-                        [% mensaje %]
-                    </div>
-                </b>
-            </font>
-        </div>
-    </fieldset>
-[% END %]
-
 <fieldset>
     
     <legend class="titulo_legend">[% 'Cambio de contrase&ntilde;a' | i18n %]</legend>
@@ -111,6 +96,15 @@ $(document).ready(function() {
         
               <div class="form-actions">
                   [% PERL %]
+                                      print C4::AR::Filtros::action_link_button(   
+                                                                          text    => "[% 'Cancelar' | i18n %]",
+                                                                          button   => "btn",
+                                                                          url => "[% url_prefix %]/usuarios/reales/datosUsuario.pl",
+                                                                          params => ["nro_socio=[% nro_socio %]","token=[% token %]"],
+                                                                          title   => "[% 'Cancelar' | i18n %]",
+                                              ) ;
+                  [% END %]
+                      [% PERL %]
                                       print C4::AR::Filtros::to_Button(   text    => "[% 'Confirmar contrase&ntilde;a' | i18n %]",
                                                                           boton   => "boton_agregar",
                                                                           onClick => "guardarCambiarPassword();",
