--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
@@ -39,30 +39,35 @@
   <div class="tab-pane fade" id="VP">
             
     <fieldset>
-           <legend>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %] ([% nivel1_template %])</legend>
+          <div class="page-header">
+            <h1>[% "Detalles de Nivel 1 registro" | i18n %]<small>([% nivel1_template %])</small></h1>
+           </div>
 
         <div id="detalle1" class="detalle1">
-            <ul class="listado_sin_margen">
+            <dl>
                 [% FOREACH nivel1 %]
                         [% IF liblibrarian %]
                             [% IF dato %]
-                            <li>    [% liblibrarian %]: <strong>[% dato %]</strong> </li>
+										<dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
+										<dd>[% dato %]&nbsp;</dd>
                             [% END %]
                         [% END %]
                 [% END %]
-            </ul>
+            </dl>
 
-        [% "N&uacute;mero Total de Ejemplares" | i18n %]:<b> [% cantItemN1 %]</b>
+ 	<h4>[% "N&uacute;mero Total de Ejemplares" | i18n %]:<b> [% cantItemN1 %]</b></h4>
         </div>
     </fieldset>
-    <script type="text/javascript">makeToggle('estado_coleccion[% id1 %]','trigger_estado_coleccion_[% id1 %]',null,false);</script>
 
 [% FOREACH nivel2 %]
 
-        <div id="fieldset_grupo[% id2 %]">
+        <div >
             <fieldset>
-                <legend class="trigger trigger_3_[% id2 %] click">[% "Detalles de Nivel 2 para registro" | i18n %] [% id2 %] [% "GRUPO" | i18n %] - [% tipo_documento %] ([% nivel2_template %])</legend>
-                    <div id="grupo[% id2 %]" class="grupo[% id2 %]">
+						<div class="page-header">
+	                       <h2>[% "Detalle de Nivel 2 " | i18n %] <small>[% "GRUPO" | i18n %] - [% tipo_documento.getNombre() %] ([% nivel2_template %])</small></h2>
+                        </div>                      
+                        
+                        <div id="grupo" class="grupo">
 
                         <!-- NIVEL 2 -->
                             <div id="[% id2 %]" style="position: relative; float:right;"></div>
@@ -72,136 +77,89 @@
 
                             <br>
 
-                            [% IF portada_registro or isbn %]
+                            [% IF isbn %]
                                <div style="position: relative; float:right; margin-right: 12px;">
-                                [% IF portada_registro %]
-                                    <a class="fancylink" href="/uploads/covers/[% portada_registro_big %]">
-                                        <img style="max-height: 180px; max-width:110px;" src="/uploads/covers/[% portada_registro_medium %]" title="Portada" alt="[% 'Portada del ejemplar' | i18n %]" />
-                                    </a>
-                                [% END %]
-                                [% IF isbn %]
                                     <div class="google-books">
                                         <a style="margin-left: 10px;" id="ISBN:[% isbn %]"  style="display:none" target="_blank">
                                             <img src="/includes/css/gbs_preview_button1.gif" border="0" style="margin: 0"/>
                                         </a>
                                     </div>
                                     <script src="http://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:[% isbn %]&callback=ProcessGBSBookInfo"></script>
-                                [% END %]
                                </div>
                             [% END %]
 
-                            <ul class="listado_sin_margen" style="clear: none; margin-top:12px;">
+                            <dl>
                                 [% FOREACH nivel2_array %]
                                     [% IF liblibrarian %]
                                         [% IF dato %]
-                                        <li> [% liblibrarian %]: <strong>[% dato %]</strong></li>
+										<dt class="inline left rightMargin">[% liblibrarian %]:&nbsp;</dt> 
+										<dd>[% dato %]&nbsp;</dd>
                                         [% END %]
                                     [% END %]
                                 [% END %] <!-- END FOREACH nivel2_array -->
-                                <li>
-                                    
-                                    
-                                    
-                                    
+                                <dd>
+                                                                       
                                     [% IF cant_nivel3 %]
-		<script>
 		
-		    $(document).ready(function(){
-		        checkedAll("select_all"+"[% id2 %]", "checkEjemplares"+"[% id2 %]");
-		        $('.fancylink').fancybox();
-		    });
-		
-		</script>
-		
-		<fieldset>
-		    <legend class="trigger trigger_2_[% id2 %] click">[% "Ejemplares" | i18n %]</legend>
-		    <div id="ejemplaresDelGrupo[% id2 %]" class="ejemplaresDelGrupo[% id2 %]" >
-					<div class="alert alert-info">
-					    <dl>
-							<dt class="inline left rightMargin">[% "Ejemplares Disponibles:"|i18n %]</dt>
-				               <dd> [% disponibles %]</dd>
-				        </dl>
-					</div>                
+										<fieldset>
+											<div class="page-header">
+											<h3 >[% "Ejemplares" | i18n %]</h3>
+											</div>
+											<div id="ejemplaresDelGrupo" class="ejemplaresDelGrupo" >
+													<div class="alert alert-info">
+														<dl>
+															<dt class="inline left rightMargin">[% "Ejemplares Disponibles:"|i18n %]</dt>
+															   <dd> [% disponibles %]</dd>
+														</dl>
+													</div>                
 
-					<form id="tablaEjemplares[% id2 %]" name="tablaEjemplares[% id2 %]" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
-                        [% PERL %]
-                            print C4::AR::Filtros::tableHeader(   
-                                                                    id              => "tabla_ejemplares[% id2 %]",
-                                                                    class           => "",
-                                                                    selectAll_id    => "select_all[% id2 %]",
-                                                                    columns         => ['[% "Sig. Top."|i18n %]',
-																						'[% "C&oacute;digo"|i18n %]',
-																						'[% "Disponibilidad"|i18n %]',
-                                                                                        '[% "Estado"|i18n %]',
-                                                                                       ]
-                                                                    
-                                        ) ;
-                        [% END %]
-						
-                        <tbody>
-						[% FOREACH nivel3 %]
-								<tr>
-						                
-						                <td>[% signatura_topografica %]</td>
-						                <td>[% barcode %]</td>
-						                <td>[% disponibilidad %]</td>
-						                <td>[% estado %] </td>
-	
-	                            
-						                <td>
-						
-						                    [% IF nivel3_obj.getNota != "" %]
-	
-	                                              <div id="nota_ejemplar_[% id3 %]" style="display:none">[% nivel3_obj.getNota %]</div>	
-	
-						                          [% PERL %]
-						                                  print C4::AR::Filtros::to_Icon( 
-						                                                                  boton         => "icon_globo",
-						                                                                  title         => "[% nivel3_obj.getNota %]",
-						                                                                  alternClass   => "botonCentradoTabla",
-	                                                                                      onClick       => "verNota('[% id3 %]');",
-						                                                              ) ;
-						                          [% END %]
-	
-						                    [% ELSE %]
-						                       ---
-						                    [% END %]
-						                </td>
-						      </tr>
-					[%   IF loop.last %]
-					</tbody>
+													<form id="tablaEjemplares[% id2 %]" name="tablaEjemplares[% id2 %]" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
+														[% PERL %]
+															print C4::AR::Filtros::tableHeader(   
+																									id              => "tabla_ejemplares[% id2 %]",
+																									class           => "",
+																									columns         => ['[% "Sig. Top."|i18n %]',
+																														'[% "C&oacute;digo"|i18n %]',
+																														'[% "Disponibilidad"|i18n %]',
+																														'[% "Estado"|i18n %]',
+																													   ]
+																									
+																		) ;
+														[% END %]
+														
+														<tbody>
+														[% FOREACH nivel3 %]
+																<tr>
+																		
+																		<td>[% signatura_topografica %]</td>
+																		<td>[% barcode %]</td>
+																		<td>[% disponibilidad.getNombre() %]</td>
+																		<td>[% estado.getNombre() %] </td>
+															  </tr>
+													[%   IF loop.last %]
+													</tbody>
 
-					[% END %]<!-- END IF loop.last -->
-					
-					
-					[% END %]<!-- END FOREACH NIVEL 3 -->
-                      </tbody>
-                  </form>
-              </table>
-    </div> <!--end <div id="ejemplaresDelGrupo -->
-</fieldset>
+													[% END %]<!-- END IF loop.last -->
+													
+													
+													[% END %]<!-- END FOREACH NIVEL 3 -->
+													  </tbody>
+												  </form>
+											  </table>
+									</div> <!--end <div id="ejemplaresDelGrupo -->
+								</fieldset>
 
-[% ELSE %]
-		<div class="alert fade in">
-           <strong>[% 'Este grupo no dispone de ejemplares' | i18n %]</strong>
-		</div>    
-[% END %]
-                                    
-                                    
-                                    
-                                    
-                                    
-                                    
-                                    
-                                    
-                                    
-                                    
-                                </li>
-                            </ul>
+								[% ELSE %]
+										<div class="alert fade in">
+										   <strong>[% 'Este grupo no dispone de ejemplares' | i18n %]</strong>
+										</div>    
+								[% END %]
+                                  
+                                </dt>
+                            </dd>
 
                 </div> <!--Fin <div id="grupo[  id2 ]-->
             </fieldset>
-            <script type="text/javascript">makeToggle('grupo[% id2 %]','trigger_3_[% id2 %]',null,false);</script>
         </div>
 
 [% END %]<!-- END FOREACH Nivel 2-->
