--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
@@ -595,7 +595,7 @@ legend {
 	line-height: 36px;
 	color: #333333;
 	border: 0;
-	border-bottom: 1px solid #D6E9C6;
+	border-bottom: 1px solid #DDDDDD;
 }
 
 label,input,button,select,textarea {
