--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -11,6 +11,18 @@ function cambiarFiltro (filtro){
 	}
 	
 </script>
+<div class="right ">
+         [% PERL %]
+                             print C4::AR::Filtros::action_link_button( 
+                                                                 button   => "btn btn-warning",
+                                                                 url=>"[% url_prefix %]/herramientas/importacion/configurar_importacion.pl",
+                                                                 params =>   ["id_importacion=[% id_importacion %]"],
+                                                                 icon => "icon-cog",
+                                                                 title   => "[% 'Configurar Importaci&oacute;n' | i18n %]",
+                                     ) ;
+         [% END %]
+
+</div>
 
     <h2>[% "Registros de la Importaci&oacute;n:" | i18n %]</h2>
 
@@ -46,7 +58,9 @@ function cambiarFiltro (filtro){
 
         <div class="contenedor_paginador">[% paginador %]</div>
         <div class="datos_tabla_div_importacion">
-            <div class="resultados_consulta">[% "La cantidad de registros es" | i18n %]: [% cantidad %]</div>
+            <div class="well">
+                <div class="resultados_consulta">[% "La cantidad de registros es" | i18n %]: [% cantidad %]</div>
+            </div>
             
             [% PERL %]
                 print C4::AR::Filtros::tableHeader(   
@@ -111,34 +125,31 @@ function cambiarFiltro (filtro){
 
                       <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
                       <td>
-                      <div>
-						   [% IF detalle_importacion.getEstado != "I" %]
-                              [% PERL %]
-                               print C4::AR::Filtros::action_set_button(    
-									title           => "[% 'Registro' | i18n %]",
-                                    button          => 'btn btn-primary',
-                                    action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
-                                    actions         => [
-										{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]")',icon=>"icon-search"},
-                                        {title => "Ignorar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","I")', icon=>"icon-ban-circle"},
-                                                       ],
-								);
-                              [% END %]
-                           [% ELSE %]
-                              [% PERL %]
-                               print C4::AR::Filtros::action_set_button(    
-									title           => "[% 'Registro' | i18n %]",
-                                    button          => 'btn btn-primary',
-                                    action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
-                                    actions         => [
-										{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
-                                        {title => "Procesar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","P");', icon=>"icon-ok-circle"},
-                                                       ],
-								);
-                              [% END %]
-						   [% END %]
-                       </div>
-                      
+							   [% IF detalle_importacion.getEstado != "I" %]
+	                              [% PERL %]
+	                               print C4::AR::Filtros::action_set_button(    
+										title           => "[% 'Registro' | i18n %]",
+	                                    button          => 'btn btn-primary',
+	                                    action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
+	                                    actions         => [
+											{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]")',icon=>"icon-search"},
+	                                        {title => "Ignorar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","I")', icon=>"icon-ban-circle"},
+	                                                       ],
+									);
+	                              [% END %]
+	                           [% ELSE %]
+	                              [% PERL %]
+	                               print C4::AR::Filtros::action_set_button(    
+										title           => "[% 'Registro' | i18n %]",
+	                                    button          => 'btn btn-primary',
+	                                    action			=> 'detalleRegistroMARC("[% detalle_importacion.getId %]")',
+	                                    actions         => [
+											{title => "Detalle", action=>'detalleRegistroMARC("[% detalle_importacion.getId %]");',icon=>"icon-search"},
+	                                        {title => "Procesar", action=>'cambiarEstadoRegistro("[% detalle_importacion.getIdImportacionIso %]","[% detalle_importacion.getId %]","P");', icon=>"icon-ok-circle"},
+	                                                       ],
+									);
+	                              [% END %]
+							   [% END %]
                       </td>
                 </tr>
             [% END %]
@@ -148,13 +159,12 @@ function cambiarFiltro (filtro){
 
 
 <div id="detalleRegistroMARC"></div>
-
-                [% PERL %]
-                                    print C4::AR::Filtros::action_button( 
-                                                                        button   => "btn btn-danger",
-                                                                        action => 'comenzarImportacion("[% id_importacion %]");',
-                                                                        title   => "[% 'Comenzar Importaci&oacute;n' | i18n %]",
-                                            ) ;
-                [% END %]
-
-
+<div class="form-actions">
+         [% PERL %]
+                             print C4::AR::Filtros::action_button( 
+                                                                 button   => "btn btn-danger",
+                                                                 action => 'comenzarImportacion("[% id_importacion %]");',
+                                                                 title   => "[% 'Comenzar Importaci&oacute;n' | i18n %]",
+                                     ) ;
+         [% END %]
+</div>
