--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -13,3 +13,11 @@ legend {
 	font-size: 16.5px;
 }
 
+.center-section-form {
+    width: 75%;
+    margin: 0 auto;
+}
+
+.medium {
+    width: 50%;
+}
