--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/intranet.css
@@ -38,54 +38,6 @@
     margin-bottom: 10px;
 }
 
-#footer {
-    clear: both;
-    position: relative;
-    z-index: 10;
-    height: 3em;
-    margin-top: -3em;
-}
-
-#marca div {
-    height: 30px;
-}
-
-#marca {
-    clear: both;
-    width: 100%;
-    height: 4.7em;
-    padding: 0;
-    bottom: 0;
-}
-
-#footer-info {
-    text-align: center;
-}
-
-#footer {
-    background-image: url(../imagenes/fondo_footer.png);
-    background-color: #f7f6f6;
-    -moz-border-radius-topleft: 8px;
-    -moz-border-radius-topright: 8px;
-    -moz-border-radius-bottomleft: 8px;
-    -moz-border-radius-bottomright: 8px;
-    background-repeat: repeat-x;
-}
-
-#marca {
-    background-color: #35414F;
-}
-
-#footer-info {
-    text-align: center;
-    color: #FEFEFE;
-}
-
-#footer-info a {
-    color: inherit;
-    font-style: none;
-}
-
 #marco_principal {
     float: left;
     width: 99%;
@@ -476,10 +428,7 @@ body {
     padding: 4px;
 }
 
-
-
-
-
+/* DATE PICKER */
 
 .datepicker {
   background-color: #ffffff;
@@ -611,3 +560,5 @@ body {
   background-color: #bfbfbf;
   color: #ffffff;
 }
+
+/* FIN DATE PICKER */
