--- a/opac/htdocs/opac-tmpl/opac-novedades_result.tmpl
+++ b/opac/htdocs/opac-tmpl/opac-novedades_result.tmpl
@@ -1,5 +1,5 @@
 [% INCLUDE 'opac-top.inc' %]
-
+[% USE HTML %]
 
 [% IF cantidad %]
 
@@ -9,18 +9,20 @@
     
         [% IF fecha != novedad.getFechaLegible %]
         
-            <fieldset><legend>Enviadas el [% novedad.getFechaLegible %]</legend></fieldset>
+            [% fecha = novedad.getFechaLegible %]
+        
+            <fieldset><legend>Enviadas el [% HTML.escape(novedad.getFechaLegible) %]</legend></fieldset>
 
         [% END %]
         
             <div class="alert alert-info">
                 <h3>
                      <a href='[% url_prefix %]/ver_novedad.pl?id=[% novedad.getId %]&amp;token=[% token %]'>
-                        [% novedad.getTitulo %]
+                        [% HTML.escape(novedad.getTitulo) %]
                     </a>
                 
                 <small>
-                  [% novedad.getResumen %]
+                  [% HTML.escape(novedad.getResumen) %]
                   <a href='[% url_prefix %]/ver_novedad.pl?id=[% novedad.getId %]&amp;token=[% token %]'>
                     [% 'Leer m&aacute;s' | i18n %] &raquo;
                   </a>
