--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialPrestamos.tmpl
@@ -2,7 +2,7 @@
     <div class="well">
     [% IF cant %]
 
-                  [% "Cantidad de pr&eacute;stamos realizados" | i18n %]: &nbsp;[% cant %]
+                  [% "Cantidad de pr&eacute;stamos realizados" | i18n %]: &nbsp;<strong>[% cant %]</strong>
                   </div>
                   <div class="contenedor_paginador">[% paginador %]</div>
                   
