--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialReservas.tmpl
@@ -3,7 +3,7 @@
 
 <div class="well">
             [% IF cantidad %]
-                    [% "Cantidad de reservas realizadas" | i18n %]: &nbsp;[% cantidad %]</div> 
+                    [% "Cantidad de reservas realizadas" | i18n %]: &nbsp;<strong>[% cantidad %]</strong></div> 
                   
                     <div class="contenedor_paginador">[% paginador %]</div>
                     
