--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
@@ -2,17 +2,18 @@
 function borrarSancion(id_sancion){
 
     var array = new Array; //array de una sola posicion, para que ante el eliminar sanciones
-    array[0]  = id_sancion
-    jConfirm(ESTA_SEGURO_QUE_DESEA_CANCELAR_LA_SANCION,SANCIONES_TITLE, function(confirmStatus){if (confirmStatus) {
+    array[0]  = id_sancion;
 
-        objAH               = new AjaxHelper(updateBorrarSancion);
-        objAH.debug         = true;
-        objAH.showOverlay   = true;
-        objAH.url=URL_PREFIX+'/circ/sancionesDB.pl';
-        objAH.accion        = "ELIMINAR_SANCIONES"
-        objAH.datosArray    = array;
+    bootbox.confirm(CONFIRMA_LA_BAJA, function (ok){ 
+        if (ok){
+            objAH               = new AjaxHelper(updateBorrarSancion);
+            objAH.debug         = true;
+            objAH.showOverlay   = true;
+            objAH.url=URL_PREFIX+'/circ/sancionesDB.pl';
+            objAH.accion        = "ELIMINAR_SANCIONES";
+            objAH.datosArray    = array;
 
-        objAH.sendToServer();
+            objAH.sendToServer();
         }
     });
 }
