--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalleRegistroMARC.tmpl
@@ -110,6 +110,12 @@
 														<dl>
 															<dt class="inline left rightMargin">[% "Ejemplares Disponibles:"|i18n %]</dt>
 															   <dd> [% disponibles %]</dd>
+															 <dt class="inline left rightMargin">[% "Ejemplares Disponibles para Sala de Lectura:"|i18n %]</dt>
+															 <dd> [% disponibles_sala %]</dd>
+															 <dt class="inline left rightMargin">[% "Ejemplares Disponibles para Domicilio:"|i18n %]</dt>
+															 <dd> [% disponibles_domiciliario %]</dd>
+															 <dt class="inline left rightMargin">[% "Ejemplares No Disponibles:"|i18n %]</dt>
+															  <dd> [% no_disponibles %]</dd>
 														</dl>
 													</div>                
 
